🎽🍝 Checkpoint ./config.json:24501867/2006 ./server.js:24501867/4

--- a/config.json
+++ b/config.json
@@ -17,19 +17,19 @@
   "RANDOM_COLORS": false,
   "BANNED_CHARACTER_REGEX": "/[\uFDFD\u200E\u0000]/gi", 
   "ROOM_SETUP": [
+   ["watr", "watr", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
+   ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
+   ["norm", "norm", "sand", "sand", "sand", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
+   ["norm", "norm", "sand", "dom2", "sand", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
+   ["norm", "norm", "sand", "sand", "sand", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
    ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
    ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
    ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
    ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
-   ["norm", "norm", "norm", "norm", "maz4", "maz4","maz4", "norm", "norm","maz4", "maz4", "norm", "norm", "norm", "norm"],
-   ["norm", "norm", "norm", "norm", "maz4", "dom2","norm", "norm", "norm","dom2", "maz4", "norm", "norm", "norm", "norm"],
    ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
-   ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
-   ["norm", "norm", "norm", "norm", "maz4", "dom2","norm", "norm", "norm","dom2", "maz4", "norm", "norm", "norm", "norm"],
-   ["norm", "norm", "norm", "norm", "maz4", "maz4","norm", "norm", "maz4","maz4", "maz4", "norm", "norm", "norm", "norm"],
-   ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
-   ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
-   ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
+   ["norm", "norm", "sand", "sand", "sand", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
+   ["norm", "norm", "sand", "sand", "sand", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
+   ["norm", "norm", "sand", "sand", "sand", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
    ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
    ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"]
   ],
