--- a/config.json
+++ b/config.json
@@ -17,21 +17,21 @@
   "RANDOM_COLORS": false,
   "BANNED_CHARACTER_REGEX": "/[\uFDFD\u200E\u0000]/gi", 
   "ROOM_SETUP": [
-   ["watr", "watr", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
-   ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
-   ["norm", "norm", "sand", "sand", "sand", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
-   ["norm", "norm", "sand", "dom2", "sand", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
-   ["norm", "norm", "sand", "sand", "sand", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
-   ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
-   ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
-   ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
-   ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
-   ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
-   ["norm", "norm", "sand", "sand", "sand", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
-   ["norm", "norm", "sand", "sand", "sand", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
-   ["norm", "norm", "sand", "sand", "sand", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
-   ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
-   ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"]
+   ["watr", "watr", "norm", "norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm"],
+   ["norm", "norm", "norm", "norm", "maz4", "norm","norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm"],
+   ["norm", "maz4", "maz4", "sand", "maz4", "norm","norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm"],
+   ["norm", "norm", "sand", "dom2", "sand", "norm","norm", "maz4", "norm", "maz4", "norm", "norm", "norm", "norm", "norm"],
+   ["norm", "norm", "maz4", "sand", "maz4", "maz4","norm", "maz4", "norm", "maz4", "norm", "norm", "norm", "norm", "norm"],
+   ["norm", "norm", "maz4", "norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm"],
+   ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm"],
+   ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "dom2", "norm", "norm", "norm", "norm", "norm", "norm"],
+   ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm"],
+   ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm"],
+   ["norm", "norm", "sand", "sand", "sand", "norm","norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm"],
+   ["norm", "norm", "sand", "sand", "sand", "norm","norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm"],
+   ["norm", "norm", "sand", "sand", "sand", "norm","norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm"],
+   ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm"],
+   ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm"]
   ],
   "X_GRID": 15,
   "Y_GRID": 15,
